--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -1,1 +1,22 @@
 /* TODO: Make it awesome */
+
+html{
+  background: rgb(169, 232, 233);
+}
+
+#title {
+
+  font-family: 'Monoton', cursive;
+  font-size: 55px;
+  margin: auto;
+  width: 50%;
+}
+
+body{
+  font-family: 'Marcellus', serif;
+  font-size: 20px;
+}
+
+#home{
+  display: inline;
+}
