--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -9,7 +9,20 @@ html{
   font-family: 'Monoton', cursive;
   font-size: 55px;
   margin: auto;
-  width: 50%;
+  width: 40%;
+}
+#list{
+  border: 1px solid black;
+  padding-top: 100px;
+}
+
+#cart{
+  padding-top: 100px;
+
+}
+
+#legend{
+padding-top: 100px;
 }
 
 body{
@@ -19,4 +32,17 @@ body{
 
 #home{
   display: inline;
+  text-align: center;
+
+}
+
+
+
+footer{
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  margin: 0%;
+
+
 }
